--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+html {
+  background: #000;
   text-align: center;
+  color: #FFF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+span, textarea {
+  display: inline-block;
+  background: #000;
+  color: #FFF;
+  text-align: center;
+  vertical-align: middle;
+  margin: auto;
+  border: none;
+  resize: none;
+  white-space: nowrap;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* display: inline; */
+  /* width: auto; */
 }
